test/spec/load-align-big.fail.txt
;;; ERROR: 1
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/load-align-big.fail.wast
(;; STDERR ;;;
Error running "wast2wasm":
out/third_party/testsuite/load-align-big.fail.wast:1:33: alignment must not be larger than natural alignment (8)
(module (memory 0) (func (drop (i64.load align=16 (i32.const 0)))))
                                ^^^^^^^^^^^^^^^^^

;;; STDERR ;;)
